	  channel as well.  Fixed JOIN command reply to check whether a
	  client is on channel already and not join it twice.  Affected
	  file lib/silcclient/command_reply.c.

	* Added new file silc-expandos.c into irssi/silc/core/ to return
	  various stuff for various signal for the statusbar etc. updating.
	  Now Irssi SILC client prints channel user modes etc. on the
	  statusbar.

Thu Mar  7 19:21:22 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Changed silc_mutex_[un]lock calls in lib/silcutil/silcschedule.c
	  to SILC_SCHEDULE_[UN]LOCK macros.

	* Added more error printing to logs in server code.  Affected
	  files silcd/server.c and silcd/protocol.c.

	* Fixed -S option parsing in Irssi SILC Client.  Affected file
	  irssi/src/silc/core/silc-core.c.

	* Added silc_buffer_alloc_size function.  Affected file is
	  lib/silcutil/silcbuffer.h.

Tue Mar  5 14:37:27 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Changed all silc_[hash|hmac|cipher|pkcs]_default tables to
	  constants.  Affected files in
	  lib/silccrypt/silcpkcs.[ch], silchash.[ch], silchmac.[ch] and
	  silccipher.[ch].

	* Changed the internal SFTP Memory FS table to const.  Affected
	  file lib/silcsftp/sftp_fs_memory.c.

Sun Mar  3 18:37:13 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Fixed the buffer formatting and unformatting routines to
	  check the size of 64 bits types with sizeof().  Affected
	  file is lib/silcutil/silcbuffmt.c.

Mon Feb 25 17:19:05 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Removed 0.6.x backwards support.

Sun Feb 24 12:53:25 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Changed all integer type names:
	  [u]int[8/16/32/64] -> Silc[UInt/Int][8/16/32/64].  This is
	  to avoid collisions with other libraries using same type names
	  as we did.

Sat Feb 23 20:31:43 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Added `prefer_ipv6' argument to the functions
	  silc_net_gethostbyname[_async].  If it is TRUE it will return