@@ -81,7 +81,8 @@ statusbar = {
 
     # treated "normally", you could change the time/user name to whatever
     time = "{sb $Z}";
-    user = "{sb $cumode$N{sbmode $usermode}{sbaway $A}}";
+    user = "{sb $cumode$N{sbaway $A}}";
+    usermode = " {sbmode $usermode}";
     topic = " $topic";
 
     # treated specially .. window is printed with non-empty windows,
@@ -124,7 +125,8 @@ statusbar = {
         window_empty = { };
         lag = { priority = "-1"; };
         act = { priority = "10"; };
-        more = { priority = "-1"; alignment = "right"; };
+        usermode = { priority = "-1"; };
+        more = { priority = "10"; alignment = "right"; };
         barend = { priority = "100"; alignment = "right"; };
       };
     };
