@@ -10,6 +10,10 @@ Fri Mar  8 17:16:41 EET 2002  Pekka Riikonen <priikone@silcnet.org>
 	  Now Irssi SILC client prints channel user modes etc. on the
 	  statusbar.
 
+	* The user mode (like server/router operator changes) is now shown
+	  on the Irssi SILC client's statusbar.  The affected files are
+	  irssi/src/silc/core/client_ops.c, silc-expandos.c.
+
 Thu Mar  7 19:21:22 EET 2002  Pekka Riikonen <priikone@silcnet.org>
 
 	* Changed silc_mutex_[un]lock calls in lib/silcutil/silcschedule.c
